cabal-version: 3.0

name: plutus-extracted
version: 0.0.0.0
build-type: Simple

library
  default-language: Haskell2010

  build-depends:
    base >=4.14 && <5

  hs-source-dirs: src
  exposed-modules:
    Ascii
    Base
    Basics
    BinInt
    BinNat
    BinNums
    BinPos
    Bool
    Bvector
    Byte
    ByteVector
    Char
    Const
    Datatypes
    Decimal
    Either
    Enum
    Err0
    Err
    Fin
    Foldable
    Identity
    List0
    List
    Logic
    Maybe
    Monoid
    Nat
    Ndigits
    Num
    PeanoNat
    Plus
    PlutusTx_Applicative
    PlutusTx_AssocMap
    PlutusTx_Base
    PlutusTx_Bool
    PlutusTx_Either
    PlutusTx_Enum
    PlutusTx_Eq
    PlutusTx_ErrorCodes
    PlutusTx_Foldable
    PlutusTx_Functor
    PlutusTx_Lattice
    PlutusTx_List
    PlutusTx_Maybe
    PlutusTx_Monoid
    PlutusTx_Numeric
    PlutusTx_Ord
    PlutusTx_Prelude
    PlutusTx_Ratio
    PlutusTx_Semigroup
    PlutusTx_Sqrt
    PlutusTx_These
    PlutusTx_Trace
    PlutusTx_Traversable
    Prim
    QArith_base
    Real
    Ring_theory
    SemigroupInternal
    Specif
    String
    Sumbool
    Tuple
    Unpeel
    VectorDef
    Vector
    Wf0
    Wf
    Wf_Z
    ZArith_dec
    Zbool
    Zeven
