cabal-version: 3.0

name: math-bounty
version: 0.0.0.0
build-type: Simple

executable math-bounty
  hs-source-dirs: src-hs
  main-is: Main.hs
  other-modules:
    MathBountyFixed

  default-language: Haskell2010
  default-extensions:
    DataKinds
    ImportQualifiedPost
    TemplateHaskell

  ghc-options:
    -fexpose-all-unfoldings
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fobject-code
    -fno-full-laziness
    -fno-spec-constr
    -fno-specialise
    -fno-strictness
    -fno-unbox-strict-fields
    -fno-unbox-small-strict-fields

  build-depends:
    base >=4.14 && <5
    , base16-bytestring
    , bytestring
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin
    , plutus-ledger-api
